--- a/Baby-shop/index.html
+++ b/Baby-shop/index.html
@@ -26,7 +26,7 @@
 		</div>
 		<nav class="main-navigation">
 			<a class="logo">
-				<span class="logo__name">Baby</span>
+				<span class="logo__name">Гнездышко</span>
 				<span class="logo__signature">Logo-sloganLogo-sloganLogo</span>
 			</a>			
 			<ul class="main-navigation__category-list visually-hidden">
@@ -245,12 +245,12 @@
 			<h2 class="main-slider-tittle visually-hidden">Главный слайдер</h2>
 			<img class="main-slider__image" src="images/main-slider-1.jpg" width="100%" max-height="846" alt="">
 		</section>
-		<section class="category-first">
+		<section class="category-first category">
 			<h2 class="category-title">Категория товара</h1>
 			<p class="category-signature">Описание категории</p>
 			<div class="category-wrapper">
 				<div class="category-item">
-					<img src="images/photo-square.png" alt="" class="category-item__image" width="100%" height="">
+					<img src="images/q.jpg" alt="" class="category-item__image" width="100%" height="">
 					<h3 class="category-item__title">Пеппер</h3>
 					<p class="category-item__price">
 						<b class="category-item__new-price">245</b>
@@ -258,7 +258,15 @@
 					</p>
 				</div>
 				<div class="category-item">
-					<img src="images/photo-square.png" alt="" class="category-item__image" width="100%" height="">
+					<img src="images/w.jpg" alt="" class="category-item__image" width="100%" height="">
+					<h3 class="category-item__title">Пеппер</h3>
+					<p class="category-item__price">
+						<b class="category-item__new-price">245</b>
+						<b class="category-item__old-price">364</b>Руб
+					</p>
+				</div>
+				<div class="category-item">
+					<img src="images/e.jpg" alt="" class="category-item__image" width="100%" height="">
 					<h3 class="category-item__title">Пеппер</h3>
 					<p class="category-item__price">
 						<b class="category-item__new-price">245</b>
@@ -293,6 +301,119 @@
 						<b class="discount-old-price">364</b>Руб
 					</p>
 					<button class="discount-button button">В корзину</button>
+				</div>
+			</div>
+		</section>
+		<section class="set">
+			<h2 class="set-tittle visually-hidden">Готовые наборы</h2>
+			<p class="set-declaration">Выберите Ваш товар</p>
+			<p class="set-advert">Превосходное качество и быстрая доставка.<br>Выберите нужный товар<br>и оформите покупку.</p>
+			<button class="set-button button">В корзину весь набор</button>
+			<span class="set-choise">или возьмите один</span>
+			<img src="images/icons/arrow.png" width="20px" alt="Стрелка" class="set-arrow">
+			<div class="set-button-wraper">
+				<button class="set-button--left slider-button--left">
+					<span class="slider-button__paint--left"></span>
+				</button>
+				<button class="set-button--right slider-button--right">
+					<span class="slider-button__paint--right"></span>
+				</button>
+				<div class="set-wrapper">
+					<img src="images/set-1.png" alt="Наши наборы" class="set-image" width="100%">
+
+					<div class="set-product set-product--one">
+					<div class="set-product__image-wrapper">
+						<img src="images/w.jpg" alt="Фото товара" class="set-product__image" width="100%">
+					</div>
+					<button class="set-product__button">
+						<span class="set-product__paint"></span>
+					</button>
+					<div class="product-cart hidden">
+						<button class="product-cart__heart">
+						</button>
+						<div class="product-cart__img-wrapper">
+							<img src="images/e.jpg" alt="" class="product-cart__img" width="100%">
+						</div>
+						<p class="product-cart__name">Стол</p>
+						<p class="product-cart__price">
+							<span class="product-cart__price-number">375</span>
+							Руб</p>
+						<button class="product-cart__button button">В корзину</button>
+					</div>
+					</div>
+
+					<div class="set-product set-product--two">
+					<div class="set-product__image-wrapper">
+						<img src="images/w.jpg" alt="Фото товара" class="set-product__image" width="100%">
+					</div>
+					<button class="set-product__button">
+						<span class="set-product__paint"></span>
+					</button>
+					<div class="product-cart hidden">
+						<button class="product-cart__heart">
+						</button>
+						<div class="product-cart__img-wrapper">
+							<img src="images/e.jpg" alt="" class="product-cart__img" width="100%">
+						</div>
+						<p class="product-cart__name">Чебурашка</p>
+						<p class="product-cart__price">
+							<span class="product-cart__price-number">375</span>
+							Руб</p>
+						<button class="product-cart__button button">В корзину</button>
+					</div>
+					</div>
+
+					<div class="set-product set-product--three">
+					<div class="set-product__image-wrapper">
+						<img src="images/w.jpg" alt="Фото товара" class="set-product__image" width="100%">
+					</div>
+					<button class="set-product__button">
+						<span class="set-product__paint"></span>
+					</button>
+					<div class="product-cart hidden">
+						<button class="product-cart__heart">
+						</button>
+						<div class="product-cart__img-wrapper">
+							<img src="images/e.jpg" alt="" class="product-cart__img" width="100%">
+						</div>
+						<p class="product-cart__name">Стул</p>
+						<p class="product-cart__price">
+							<span class="product-cart__price-number">375</span>
+							Руб</p>
+						<button class="product-cart__button button">В корзину</button>
+					</div>
+					</div>
+
+				</div>
+			</div>
+		</section>
+		<section class="category-second category">
+			<h2 class="category-title">Категория товара</h1>
+			<p class="category-signature">Описание категории</p>
+			<div class="category-wrapper">
+				<div class="category-item">
+					<img src="images/q.jpg" alt="" class="category-item__image" width="100%" height="">
+					<h3 class="category-item__title">Пеппер</h3>
+					<p class="category-item__price">
+						<b class="category-item__new-price">245</b>
+						<b class="category-item__old-price">364</b>Руб
+					</p>
+				</div>
+				<div class="category-item">
+					<img src="images/w.jpg" alt="" class="category-item__image" width="100%" height="">
+					<h3 class="category-item__title">Пеппер</h3>
+					<p class="category-item__price">
+						<b class="category-item__new-price">245</b>
+						<b class="category-item__old-price">364</b>Руб
+					</p>
+				</div>
+				<div class="category-item">
+					<img src="images/e.jpg" alt="" class="category-item__image" width="100%" height="">
+					<h3 class="category-item__title">Пеппер</h3>
+					<p class="category-item__price">
+						<b class="category-item__new-price">245</b>
+						<b class="category-item__old-price">364</b>Руб
+					</p>
 				</div>
 			</div>
 		</section>
