--- a/Baby-shop/index.html
+++ b/Baby-shop/index.html
@@ -26,7 +26,7 @@
 		</div>
 		<nav class="main-navigation">
 			<a class="logo">
-				<span class="logo__name">Гнездышко</span>
+				<span class="logo__name">Logo</span>
 				<span class="logo__signature">Logo-sloganLogo-sloganLogo</span>
 			</a>			
 			<ul class="main-navigation__category-list visually-hidden">
@@ -249,30 +249,34 @@
 			<h2 class="category-title">Категория товара</h1>
 			<p class="category-signature">Описание категории</p>
 			<div class="category-wrapper">
-				<div class="category-item">
-					<img src="images/q.jpg" alt="" class="category-item__image" width="100%" height="">
+
+				<a href="#" class="category-item">
+					<img src="images/cart-1.png" alt="Фото товара" class="category-item__image" width="100%">
+					<h3 class="category-item__title">ПепперПеппер</h3>
+					<p class="category-item__price">
+						<b class="category-item__new-price">245</b>
+						<b class="category-item__old-price">364</b>Руб
+					</p>
+				</a>
+
+				<a href="#" class="category-item">
+					<img src="images/cart-2.png" alt="Фото товара" class="category-item__image" width="100%">
 					<h3 class="category-item__title">Пеппер</h3>
 					<p class="category-item__price">
 						<b class="category-item__new-price">245</b>
 						<b class="category-item__old-price">364</b>Руб
 					</p>
-				</div>
-				<div class="category-item">
-					<img src="images/w.jpg" alt="" class="category-item__image" width="100%" height="">
+				</a>
+
+				<a href="#" class="category-item">
+					<img src="images/cart-3.png" alt="Фото товара" class="category-item__image" width="100%">
 					<h3 class="category-item__title">Пеппер</h3>
 					<p class="category-item__price">
 						<b class="category-item__new-price">245</b>
 						<b class="category-item__old-price">364</b>Руб
 					</p>
-				</div>
-				<div class="category-item">
-					<img src="images/e.jpg" alt="" class="category-item__image" width="100%" height="">
-					<h3 class="category-item__title">Пеппер</h3>
-					<p class="category-item__price">
-						<b class="category-item__new-price">245</b>
-						<b class="category-item__old-price">364</b>Руб
-					</p>
-				</div>
+				</a>
+
 			</div>
 		</section>
 		<section class="discount">
@@ -286,7 +290,7 @@
 			<div class="discount-slide-wrapper-one">
 				<div class="discount-card">
 					<span class="discount-card__tittle">Я ананас!</span>
-					<img src="images/photo-square.png" alt="" class="discount-card__image" width="100%">
+					<img src="images/cart-2.png" alt="" class="discount-card__image" width="100%">
 				</div>
 				<div class="discount-info">
 					<div class="discount-data">
@@ -323,7 +327,7 @@
 
 					<div class="set-product set-product--one">
 					<div class="set-product__image-wrapper">
-						<img src="images/w.jpg" alt="Фото товара" class="set-product__image" width="100%">
+						<img src="images/cart-1.png" alt="Фото товара" class="set-product__image" width="100%">
 					</div>
 					<button class="set-product__button">
 						<span class="set-product__paint"></span>
@@ -332,7 +336,7 @@
 						<button class="product-cart__heart">
 						</button>
 						<div class="product-cart__img-wrapper">
-							<img src="images/e.jpg" alt="" class="product-cart__img" width="100%">
+							<img src="images/cart-1.png" alt="" class="product-cart__img" width="100%">
 						</div>
 						<p class="product-cart__name">Стол</p>
 						<p class="product-cart__price">
@@ -344,7 +348,7 @@
 
 					<div class="set-product set-product--two">
 					<div class="set-product__image-wrapper">
-						<img src="images/w.jpg" alt="Фото товара" class="set-product__image" width="100%">
+						<img src="images/cart-3.png" alt="Фото товара" class="set-product__image" width="100%">
 					</div>
 					<button class="set-product__button">
 						<span class="set-product__paint"></span>
@@ -353,7 +357,7 @@
 						<button class="product-cart__heart">
 						</button>
 						<div class="product-cart__img-wrapper">
-							<img src="images/e.jpg" alt="" class="product-cart__img" width="100%">
+							<img src="images/cart-3.png" alt="" class="product-cart__img" width="100%">
 						</div>
 						<p class="product-cart__name">Чебурашка</p>
 						<p class="product-cart__price">
@@ -365,7 +369,7 @@
 
 					<div class="set-product set-product--three">
 					<div class="set-product__image-wrapper">
-						<img src="images/w.jpg" alt="Фото товара" class="set-product__image" width="100%">
+						<img src="images/cart-2.png" alt="Фото товара" class="set-product__image" width="100%">
 					</div>
 					<button class="set-product__button">
 						<span class="set-product__paint"></span>
@@ -374,7 +378,7 @@
 						<button class="product-cart__heart">
 						</button>
 						<div class="product-cart__img-wrapper">
-							<img src="images/e.jpg" alt="" class="product-cart__img" width="100%">
+							<img src="images/cart-2.png" alt="" class="product-cart__img" width="100%">
 						</div>
 						<p class="product-cart__name">Стул</p>
 						<p class="product-cart__price">
@@ -391,33 +395,100 @@
 			<h2 class="category-title">Категория товара</h1>
 			<p class="category-signature">Описание категории</p>
 			<div class="category-wrapper">
-				<div class="category-item">
-					<img src="images/q.jpg" alt="" class="category-item__image" width="100%" height="">
+
+				<a href="#" class="category-item">
+					<img src="images/cart-3.png" alt="Фото товара" class="category-item__image" width="100%">
 					<h3 class="category-item__title">Пеппер</h3>
 					<p class="category-item__price">
 						<b class="category-item__new-price">245</b>
 						<b class="category-item__old-price">364</b>Руб
 					</p>
-				</div>
-				<div class="category-item">
-					<img src="images/w.jpg" alt="" class="category-item__image" width="100%" height="">
+				</a>
+
+				<a href="#" class="category-item">
+					<img src="images/cart-2.png" alt="Фото товара" class="category-item__image" width="100%">
 					<h3 class="category-item__title">Пеппер</h3>
 					<p class="category-item__price">
 						<b class="category-item__new-price">245</b>
 						<b class="category-item__old-price">364</b>Руб
 					</p>
-				</div>
-				<div class="category-item">
-					<img src="images/e.jpg" alt="" class="category-item__image" width="100%" height="">
+				</a>
+
+				<a href="#" class="category-item">
+					<img src="images/cart-1.png" alt="Фото товара" class="category-item__image" width="100%">
 					<h3 class="category-item__title">Пеппер</h3>
 					<p class="category-item__price">
 						<b class="category-item__new-price">245</b>
 						<b class="category-item__old-price">364</b>Руб
 					</p>
-				</div>
+				</a>
+
 			</div>
 		</section>
+		<section class="quote">
+			<h2 class="quote-title">Отзывы</h2>
+			<p class="quote-subscribe">Что клиенты говорят о нашей продукции</p>
+			<div class="quote-wrapper">
+
+				<div class="quote-cart">
+					<div class="quote-cart__image-wrapper">
+						<img src="images/cart-2.png" alt="Фото пользователя" class="quote-cart__image" width="100%" height="100%">
+					</div>
+					<span class="quote-cart__name">Петя</span>
+					<span class="qoute-cart__text">Я рыбный текст, я тут для того, чтобы занять место, я не несу никакого смысла.</span>
+					<span class="quote-cart__icon"></span>
+				</div>
+
+				<div class="quote-cart">
+					<div class="quote-cart__image-wrapper">
+						<img src="images/cart-1.png" alt="Фото пользователя" class="quote-cart__image" width="100%">
+					</div>
+					<span class="quote-cart__name">Петя</span>
+					<span class="qoute-cart__text">Я рыбный текст, я тут для того, чтобы занять место, я не несу никакого смысла. Я рыбный текст, я тут для того, чтобы занять место, я не несу никакого смысла.</span>
+					<span class="quote-cart__icon"></span>
+				</div>
+
+				<div class="quote-cart">
+					<div class="quote-cart__image-wrapper">
+						<img src="images/cart-3.png" alt="Фото пользователя" class="quote-cart__image" width="100%">
+					</div>
+					<span class="quote-cart__name">Петя</span>
+					<span class="qoute-cart__text">Я рыбный текст, я тут для того, чтобы занять место, я не несу никакого смысла. Я рыбный текст, я тут для того, чтобы занять место, я не несу никакого смысла.</span>
+					<span class="quote-cart__icon"></span>
+				</div>
+
+			</div>
+		</section>
+		<section class="blog">
+			<h2 class="blog-title">Блог</h2>
+			<p class="blog-subscribe">Подзаголовок блога</p>
+			<div class="blog-wrapper">
+
+				<a href="#" class="blog-cart">
+					<img src="images/cart-3.png" alt="Фото статьи" class="blog-cart__image" width="100%">
+					<h3 class="blog-cart__title">Название статьи</h3>
+					<p class="blog-cart__data">10.03.2476</p>
+				</a>
+
+				<a href="#" class="blog-cart">
+					<img src="images/cart-1.png" alt="Фото статьи" class="blog-cart__image" width="100%">
+					<h3 class="blog-cart__title">Название статьи</h3>
+					<p class="blog-cart__data">10.03.2476</p>
+				</a>
+
+				<a href="#" class="blog-cart">
+					<img src="images/cart-2.png" alt="Фото статьи" class="blog-cart__image" width="100%">
+					<h3 class="blog-cart__title">Название статьи</h3>
+					<p class="blog-cart__data">10.03.2476</p>
+				</a>
+
+			</div>
+			<a href="#" class="blog-link">Прочитайте другие наши статьи &#8594;</a>
+		</section>
 	</main>
+	<footer class="main-footer">
+		
+	</footer>
 	<script src="js/sistem.js"></script>
 </body>
 </html>
