--- a/Baby-shop/index.html
+++ b/Baby-shop/index.html
@@ -10,14 +10,14 @@
 <body>
 	<header class="main-header">
 		<div class="main-header__content-wrapper">
-			<p class="phone">+7 (921) 123-45-67</p>
+			<p class="version">+7 (921) 123-45-67</p>
 			<a href="#" class="delivery">Доставка и контакты</a>
-			<div class="social">
+			<div class="social-header social">
 				<a href="#" class="social__vk"></a>
 				<a href="#" class="social__instagram"></a>
 			</div>
 			<nav class="user-navigation">
-				<button class="user-navigation__login user-navigation__item"></button>
+				<a href="#" class="user-navigation__login user-navigation__item"></a>
 				<a href="#" class="user-navigation__likes user-navigation__item"></a>
 				<a href="#" class="user-navigation__basket user-navigation__item">
 					<span class="user-navigation__value user-navigation__item">12</span>
@@ -25,18 +25,56 @@
 			</nav>
 		</div>
 		<nav class="main-navigation">
-			<a class="logo">
-				<span class="logo__name">Logo</span>
-				<span class="logo__signature">Logo-sloganLogo-sloganLogo</span>
+			<a class="logo-header">
+				<img src="images/icons/logo.png" alt="Logo" class="logo__image" width="100%">
 			</a>			
-			<ul class="main-navigation__category-list visually-hidden">
+			<ul class="main-navigation__category-list">
+
 				<li class="main-navigation__category-item">
-					<a href="#" class="main-navigation__category-link">Овощи</a>
-					<span class="main-navigation__open-icon"></span>
-					<button class="main-navigation__close-button">
-						<span class="main-navigation__close-paint"></span>
-					</button>
-					<ul class="main-navigation__subcategory-list">
+					<a class="main-navigation__category-link">Овощи
+						<button class="main-navigation__category-button">
+							<span class="main-navigation__category-icon"></span>
+						</button>
+					</a>
+					<ul class="main-navigation__subcategory-list hidden-menu">
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
+						</li>
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Кукумбер</a>
+						</li>
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Кабачки</a>
+						</li>
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Картошка</a>
+						</li>
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Антошка</a>
+						</li>
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
+						</li>
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
+						</li>
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
+						</li>
+						<li class="main-navigation__category-accent">
+							<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
+							<span class="main-navigation__accent-signature"></span>
+						</li>
+					</ul>
+				</li>
+
+				<li class="main-navigation__category-item">
+					<a href="#" class="main-navigation__category-link">Овощи
+						<button class="main-navigation__category-button">
+							<span class="main-navigation__category-icon"></span>
+						</button>
+					</a>
+					<ul class="main-navigation__subcategory-list hidden-menu">
 						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
 						</li>
@@ -61,10 +99,14 @@
 						</li>
 					</ul>
 				</li>
+
 				<li class="main-navigation__category-item">
-					<a href="#" class="main-navigation__category-link">Овощи</a>
-					<span class="main-navigation__open-icon"></span>
-					<ul class="main-navigation__subcategory-list">
+					<a href="#" class="main-navigation__category-link">Овощи
+						<button class="main-navigation__category-button">
+							<span class="main-navigation__category-icon"></span>
+						</button>
+					</a>
+					<ul class="main-navigation__subcategory-list hidden-menu">
 						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
 						</li>
@@ -89,10 +131,14 @@
 						</li>
 					</ul>
 				</li>
+
 				<li class="main-navigation__category-item">
-					<a href="#" class="main-navigation__category-link">Овощи</a>
-					<span class="main-navigation__open-icon"></span>
-					<ul class="main-navigation__subcategory-list">
+					<a href="#" class="main-navigation__category-link">Овощи
+						<button class="main-navigation__category-button">
+							<span class="main-navigation__category-icon"></span>
+						</button>
+					</a>
+					<ul class="main-navigation__subcategory-list hidden-menu">
 						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
 						</li>
@@ -117,10 +163,14 @@
 						</li>
 					</ul>
 				</li>
+
 				<li class="main-navigation__category-item">
-					<a href="#" class="main-navigation__category-link">Овощи</a>
-					<span class="main-navigation__open-icon"></span>
-					<ul class="main-navigation__subcategory-list">
+					<a href="#" class="main-navigation__category-link">Овощи
+						<button class="main-navigation__category-button">
+							<span class="main-navigation__category-icon"></span>
+						</button>
+					</a>
+					<ul class="main-navigation__subcategory-list hidden-menu">
 						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
 						</li>
@@ -145,10 +195,14 @@
 						</li>
 					</ul>
 				</li>
+
 				<li class="main-navigation__category-item">
-					<a href="#" class="main-navigation__category-link">Овощи</a>
-					<span class="main-navigation__open-icon"></span>
-					<ul class="main-navigation__subcategory-list">
+					<a href="#" class="main-navigation__category-link">Овощи
+						<button class="main-navigation__category-button">
+							<span class="main-navigation__category-icon"></span>
+						</button>
+					</a>
+					<ul class="main-navigation__subcategory-list hidden-menu">
 						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
 						</li>
@@ -173,74 +227,23 @@
 						</li>
 					</ul>
 				</li>
-				<li class="main-navigation__category-item">
-					<a href="#" class="main-navigation__category-link">Овощи</a>
-					<span class="main-navigation__open-icon"></span>
-					<ul class="main-navigation__subcategory-list">
-						<li class="main-navigation__subcategory-item">
-							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
-						</li>
-						<li class="main-navigation__subcategory-item">
-							<a href="#" class="main-navigation__subcategory-link">Кукумбер</a>
-						</li>
-						<li class="main-navigation__subcategory-item">
-							<a href="#" class="main-navigation__subcategory-link">Кабачки</a>
-						</li>
-						<li class="main-navigation__subcategory-item">
-							<a href="#" class="main-navigation__subcategory-link">Картошка</a>
-						</li>
-						<li class="main-navigation__subcategory-item">
-							<a href="#" class="main-navigation__subcategory-link">Антошка</a>
-						</li>
-						<li class="main-navigation__subcategory-item">
-							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
-						</li>
-						<li class="main-navigation__category-accent">
-							<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
-							<span class="main-navigation__accent-signature"></span>
-						</li>
-					</ul>
-				</li>
-				<li class="main-navigation__category-item">
-					<a href="#" class="main-navigation__category-link">Овощи</a>
-					<span class="main-navigation__open-icon"></span>
-					<ul class="main-navigation__subcategory-list">
-						<li class="main-navigation__subcategory-item">
-							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
-						</li>
-						<li class="main-navigation__subcategory-item">
-							<a href="#" class="main-navigation__subcategory-link">Кукумбер</a>
-						</li>
-						<li class="main-navigation__subcategory-item">
-							<a href="#" class="main-navigation__subcategory-link">Кабачки</a>
-						</li>
-						<li class="main-navigation__subcategory-item">
-							<a href="#" class="main-navigation__subcategory-link">Картошка</a>
-						</li>
-						<li class="main-navigation__subcategory-item">
-							<a href="#" class="main-navigation__subcategory-link">Антошка</a>
-						</li>
-						<li class="main-navigation__subcategory-item">
-							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
-						</li>
-						<li class="main-navigation__category-accent">
-							<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
-							<span class="main-navigation__accent-signature"></span>
-						</li>
-					</ul>
-				</li>
+
 			</ul>
-			<form action="" class="search-form" >
-				<input type="text" class="search-form__input hidden">
-				<button class="search-form__button"></button>
-			</form>
-			<button class="main-navigation__open-button">
-				<span class="main-navigation__open-paint"></span>
-			</button>
 		</nav>
 	</header>
 	<main class="main-content">
 		<h1 class="site-name visually-hidden">Магазин детских вещей Baby-shop</h1>
+		<section class="buttons">
+			<div class="buttons-wrapper">
+				<button class="navigation-button">
+					<span class="navigation-button__paint"></span>
+				</button>
+				<button class="search-button"></button>
+				<button class="filter-button"></button>	
+
+			</div>
+			
+		</section>
 		<section class="main-slider">
 			<h2 class="main-slider-tittle visually-hidden">Главный слайдер</h2>
 			<img class="main-slider__image" src="images/main-slider-1.jpg" width="100%" max-height="846" alt="">
@@ -487,7 +490,27 @@
 		</section>
 	</main>
 	<footer class="main-footer">
-		
+		<div class="footer-wrapper">
+			<a href="#" class="logo-footer">
+			<img src="images/icons/logo.png" alt="logo" class="logo__image" width="100%">
+			</a>
+			<div class="pay">
+				<span class="pay__item pay--visa"></span>
+				<span class="pay__item pay--mastercard"></span>
+				<span class="pay__item pay--paypal"></span>
+			</div>
+			<div class="social-footer social">
+				<a href="#" class="social__vk"></a>
+				<a href="#" class="social__instagram"></a>
+			</div>
+			<a href="#" class="adout">О нас</a>
+			<a href="#" class="policy">Политика конфеденциальности</a>
+			<a href="#" class="backup">Обмен и возврат</a>
+			<a href="#" class="map">Карта сайта</a>
+			<a href="#" class="contact">Контакты</a>
+			<a href="#" class="webmaster">Веб технологии:<br>Алексей Староверов</a>
+		</div>
+		<span class="copy">&copy; Copyrights 2019</span>
 	</footer>
 	<script src="js/sistem.js"></script>
 </body>
