--- a/Baby-shop/index.html
+++ b/Baby-shop/index.html
@@ -10,7 +10,7 @@
 <body>
 	<header class="main-header">
 		<div class="main-header__content-wrapper">
-			<p class="version">+7 (921) 123-45-67</p>
+			<a href="#" class="version">Полная версия сайта</p>
 			<a href="#" class="delivery">Доставка и контакты</a>
 			<div class="social-header social">
 				<a href="#" class="social__vk"></a>
@@ -235,6 +235,7 @@
 		<h1 class="site-name visually-hidden">Магазин детских вещей Baby-shop</h1>
 		<section class="buttons">
 			<div class="buttons-wrapper">
+
 				<button class="navigation-button">
 					<span class="navigation-button__paint"></span>
 				</button>
@@ -242,14 +243,15 @@
 				<button class="filter-button"></button>	
 
 			</div>
-			
 		</section>
 		<section class="main-slider">
 			<h2 class="main-slider-tittle visually-hidden">Главный слайдер</h2>
-			<img class="main-slider__image" src="images/main-slider-1.jpg" width="100%" max-height="846" alt="">
+			<img src="images/main-slider-1.png" class="main-slider__image" width="100%" max-height="846" alt="Slider">
+			<img src="images/main-slider-2.png" class="main-slider__image" width="100%" max-height="846" alt="Slider">
+			<img src="images/main-slider-3.png" class="main-slider__image" width="100%" max-height="846" alt="Slider">
 		</section>
 		<section class="category-first category">
-			<h2 class="category-title">Категория товара</h1>
+			<h2 class="category-title">Категория товара</h2>
 			<p class="category-signature">Описание категории</p>
 			<div class="category-wrapper">
 
@@ -290,26 +292,99 @@
 			<button class="discount-button--right slider-button--right">
 				<span class="slider-button__paint--right"></span>
 			</button>
-			<div class="discount-slide-wrapper-one">
-				<div class="discount-card">
-					<span class="discount-card__tittle">Я ананас!</span>
-					<img src="images/cart-2.png" alt="" class="discount-card__image" width="100%">
-				</div>
-				<div class="discount-info">
-					<div class="discount-data">
-						<span class="discount-data__day discount-data__item">2<br>дней</span>
-						<span class="discount-data__hour discount-data__item">1<br>час.</span>
-						<span class="discount-data__min discount-data__item">31<br>мин.</span>
-						<span class="discount-data__sec discount-data__item">16<br>сек.</span>
+
+			<div class="discount-wrapper">
+
+				<div class="discount-slide-wrapper">
+					<div class="discount-card">
+						<span class="discount-card__tittle">Я слайд 1</span>
+						<img src="images/cart-2.png" alt="" class="discount-card__image" width="100%">
 					</div>
-					<h3 class="discount-product-name">А я томат!</h3>
-					<p class="discount-price">
-						<b class="discount-new-price">245</b>
-						<b class="discount-old-price">364</b>Руб
-					</p>
-					<button class="discount-button button">В корзину</button>
+					<div class="discount-info">
+						<div class="discount-data">
+							<span class="discount-data__day discount-data__item">2<br>дней</span>
+							<span class="discount-data__hour discount-data__item">1<br>час.</span>
+							<span class="discount-data__min discount-data__item">31<br>мин.</span>
+							<span class="discount-data__sec discount-data__item">16<br>сек.</span>
+						</div>
+						<h3 class="discount-product-name">А я томат!</h3>
+						<p class="discount-price">
+							<b class="discount-new-price">245</b>
+							<b class="discount-old-price">364</b>Руб
+						</p>
+						<button class="discount-button button">В корзину</button>
+					</div>
 				</div>
+
+				<div class="discount-slide-wrapper hidden">
+					<div class="discount-card">
+						<span class="discount-card__tittle">Я слайд 2</span>
+						<img src="images/cart-3.png" alt="" class="discount-card__image" width="100%">
+					</div>
+					<div class="discount-info">
+						<div class="discount-data">
+							<span class="discount-data__day discount-data__item">2<br>дней</span>
+							<span class="discount-data__hour discount-data__item">1<br>час.</span>
+							<span class="discount-data__min discount-data__item">31<br>мин.</span>
+							<span class="discount-data__sec discount-data__item">16<br>сек.</span>
+						</div>
+						<h3 class="discount-product-name">А я томат!</h3>
+						<p class="discount-price">
+							<b class="discount-new-price">245</b>
+							<b class="discount-old-price">364</b>Руб
+						</p>
+						<button class="discount-button button">В корзину</button>
+					</div>
+				</div>
+
+				<div class="discount-slide-wrapper hidden">
+					<div class="discount-card">
+						<span class="discount-card__tittle">Я слайд 3</span>
+						<img src="images/cart-2.png" alt="" class="discount-card__image" width="100%">
+					</div>
+					<div class="discount-info">
+						<div class="discount-data">
+							<span class="discount-data__day discount-data__item">2<br>дней</span>
+							<span class="discount-data__hour discount-data__item">1<br>час.</span>
+							<span class="discount-data__min discount-data__item">31<br>мин.</span>
+							<span class="discount-data__sec discount-data__item">16<br>сек.</span>
+						</div>
+						<h3 class="discount-product-name">А я томат!</h3>
+						<p class="discount-price">
+							<b class="discount-new-price">245</b>
+							<b class="discount-old-price">364</b>Руб
+						</p>
+						<button class="discount-button button">В корзину</button>
+					</div>
+				</div>
+
+				<div class="discount-slide-wrapper hidden">
+					<div class="discount-card">
+						<span class="discount-card__tittle">Я слайд 4</span>
+						<img src="images/cart-2.png" alt="" class="discount-card__image" width="100%">
+					</div>
+					<div class="discount-info">
+						<div class="discount-data">
+							<span class="discount-data__day discount-data__item">2<br>дней</span>
+							<span class="discount-data__hour discount-data__item">1<br>час.</span>
+							<span class="discount-data__min discount-data__item">31<br>мин.</span>
+							<span class="discount-data__sec discount-data__item">16<br>сек.</span>
+						</div>
+						<h3 class="discount-product-name">А я томат!</h3>
+						<p class="discount-price">
+							<b class="discount-new-price">245</b>
+							<b class="discount-old-price">364</b>Руб
+						</p>
+						<button class="discount-button button">В корзину</button>
+					</div>
+				</div>
+
+
 			</div>
+
+			
+
+
 		</section>
 		<section class="set">
 			<h2 class="set-tittle visually-hidden">Готовые наборы</h2>
@@ -325,6 +400,7 @@
 				<button class="set-button--right slider-button--right">
 					<span class="slider-button__paint--right"></span>
 				</button>
+
 				<div class="set-wrapper">
 					<img src="images/set-1.png" alt="Наши наборы" class="set-image" width="100%">
 
@@ -390,8 +466,142 @@
 						<button class="product-cart__button button">В корзину</button>
 					</div>
 					</div>
-
 				</div>
+
+				<div class="set-wrapper hidden">
+					<img src="images/set-1.png" alt="Наши наборы" class="set-image" width="100%">
+
+					<div class="set-product set-product--one">
+					<div class="set-product__image-wrapper">
+						<img src="images/cart-1.png" alt="Фото товара" class="set-product__image" width="100%">
+					</div>
+					<button class="set-product__button">
+						<span class="set-product__paint"></span>
+					</button>
+					<div class="product-cart hidden">
+						<button class="product-cart__heart">
+						</button>
+						<div class="product-cart__img-wrapper">
+							<img src="images/cart-1.png" alt="" class="product-cart__img" width="100%">
+						</div>
+						<p class="product-cart__name">Стол</p>
+						<p class="product-cart__price">
+							<span class="product-cart__price-number">375</span>
+							Руб</p>
+						<button class="product-cart__button button">В корзину</button>
+					</div>
+					</div>
+
+					<div class="set-product set-product--two">
+					<div class="set-product__image-wrapper">
+						<img src="images/cart-3.png" alt="Фото товара" class="set-product__image" width="100%">
+					</div>
+					<button class="set-product__button">
+						<span class="set-product__paint"></span>
+					</button>
+					<div class="product-cart hidden">
+						<button class="product-cart__heart">
+						</button>
+						<div class="product-cart__img-wrapper">
+							<img src="images/cart-3.png" alt="" class="product-cart__img" width="100%">
+						</div>
+						<p class="product-cart__name">Чебурашка</p>
+						<p class="product-cart__price">
+							<span class="product-cart__price-number">375</span>
+							Руб</p>
+						<button class="product-cart__button button">В корзину</button>
+					</div>
+					</div>
+
+					<div class="set-product set-product--three">
+					<div class="set-product__image-wrapper">
+						<img src="images/cart-2.png" alt="Фото товара" class="set-product__image" width="100%">
+					</div>
+					<button class="set-product__button">
+						<span class="set-product__paint"></span>
+					</button>
+					<div class="product-cart hidden">
+						<button class="product-cart__heart">
+						</button>
+						<div class="product-cart__img-wrapper">
+							<img src="images/cart-2.png" alt="" class="product-cart__img" width="100%">
+						</div>
+						<p class="product-cart__name">Стул</p>
+						<p class="product-cart__price">
+							<span class="product-cart__price-number">375</span>
+							Руб</p>
+						<button class="product-cart__button button">В корзину</button>
+					</div>
+					</div>
+				</div>
+
+				<div class="set-wrapper hidden">
+					<img src="images/set-1.png" alt="Наши наборы" class="set-image" width="100%">
+
+					<div class="set-product set-product--one">
+					<div class="set-product__image-wrapper">
+						<img src="images/cart-1.png" alt="Фото товара" class="set-product__image" width="100%">
+					</div>
+					<button class="set-product__button">
+						<span class="set-product__paint"></span>
+					</button>
+					<div class="product-cart hidden">
+						<button class="product-cart__heart">
+						</button>
+						<div class="product-cart__img-wrapper">
+							<img src="images/cart-1.png" alt="" class="product-cart__img" width="100%">
+						</div>
+						<p class="product-cart__name">Стол</p>
+						<p class="product-cart__price">
+							<span class="product-cart__price-number">375</span>
+							Руб</p>
+						<button class="product-cart__button button">В корзину</button>
+					</div>
+					</div>
+
+					<div class="set-product set-product--two">
+					<div class="set-product__image-wrapper">
+						<img src="images/cart-3.png" alt="Фото товара" class="set-product__image" width="100%">
+					</div>
+					<button class="set-product__button">
+						<span class="set-product__paint"></span>
+					</button>
+					<div class="product-cart hidden">
+						<button class="product-cart__heart">
+						</button>
+						<div class="product-cart__img-wrapper">
+							<img src="images/cart-3.png" alt="" class="product-cart__img" width="100%">
+						</div>
+						<p class="product-cart__name">Чебурашка</p>
+						<p class="product-cart__price">
+							<span class="product-cart__price-number">375</span>
+							Руб</p>
+						<button class="product-cart__button button">В корзину</button>
+					</div>
+					</div>
+
+					<div class="set-product set-product--three">
+					<div class="set-product__image-wrapper">
+						<img src="images/cart-2.png" alt="Фото товара" class="set-product__image" width="100%">
+					</div>
+					<button class="set-product__button">
+						<span class="set-product__paint"></span>
+					</button>
+					<div class="product-cart hidden">
+						<button class="product-cart__heart">
+						</button>
+						<div class="product-cart__img-wrapper">
+							<img src="images/cart-2.png" alt="" class="product-cart__img" width="100%">
+						</div>
+						<p class="product-cart__name">Стул</p>
+						<p class="product-cart__price">
+							<span class="product-cart__price-number">375</span>
+							Руб</p>
+						<button class="product-cart__button button">В корзину</button>
+					</div>
+					</div>
+				</div>
+
 			</div>
 		</section>
 		<section class="category-second category">
