--- a/Baby-shop/index.html
+++ b/Baby-shop/index.html
@@ -22,12 +22,79 @@
 				<a href="#" class="user-navigation__basket user-navigation__item">
 					<span class="user-navigation__value user-navigation__item">12</span>
 				</a>
+				<div class="user-navigation__user-menu">
+
+					<div class="user-navigation__enter">
+						<div class="user-menu__social">
+							<button class="user-menu__vk button">Вконтакте</button>
+							<button class="user-menu__fb button">Facebook</button>	
+						</div>
+						<div class="user-menu__servis">
+							<span class="user-menu__servis-or">или</span>
+						</div>
+						<form action="POST" class="user-menu__user-form">
+							<input type="login" class="user-form__login input" placeholder="Почтовый ящик">
+							<input type="password" class="user-form__password input" placeholder="Пароль">
+							<button class="user-form__submit button">Войти</button>
+						</form>
+						<div class="user-menu__link">
+							<button class="user-menu__forget">Забыли пароль?</button>
+							<button class="user-menu__reg">Регистрация</button>	
+						</div>
+					</div>
+
+					<div class="user-navigation__reg hidden">
+						<button class="user-navigation__back user-navigation__back-reg">
+							<span class="user-navigation__back-paint"></span>
+						</button>
+						<div class="user-menu__social">
+							<button class="user-menu__vk button">Вконтакте</button>
+							<button class="user-menu__fb button">Facebook</button>	
+						</div>
+						<div class="user-menu__servis">
+							<span class="user-menu__servis-or">или</span>
+						</div>
+						<form action="POST" class="user-menu__user-form">
+							<input type="login" class="user-form__login input" placeholder="Почтовый ящик">
+							<input type="password" class="user-form__password input" placeholder="Пароль">
+							<input type="password" class="user-form__password input" placeholder="Повторите пароль">
+							<button class="user-form__submit button">Регистрация</button>
+						</form>
+						<div class="user-menu__link">
+						</div>
+					</div>
+
+					<div class="user-navigation__forget hidden">
+						<button class="user-navigation__back user-navigation__back-forget">
+							<span class="user-navigation__back-paint"></span>
+						</button>
+						<span class="user-menu__forget-title">Мы вышлем Ваш пароль на почту</span>
+						<form action="POST" class="user-menu__user-form">
+							<input type="login" class="user-form__login input" placeholder="Почтовый ящик">
+							<button class="user-form__submit button">Отправить пароль</button>
+						</form>
+						<div class="user-menu__link">
+						</div>
+					</div>
+
+				</div>
 			</nav>
 		</div>
 		<nav class="main-navigation">
 			<a class="logo-header">
 				<img src="images/icons/logo.png" alt="Logo" class="logo__image" width="100%">
-			</a>			
+			</a>
+			<div class="search">
+					<div class="search__wrapper">
+						<form action="POST" class="search__form">
+							<input type="text" class="search-form__input">
+							<button class="search-form__button button">Найти</button>
+						</form>
+						<div class="search__result-wrapper">
+							
+						</div>
+					</div>
+				</div>		
 			<ul class="main-navigation__category-list">
 
 				<li class="main-navigation__category-item">
